shim/third-party/rust/vendor/ref-cast-1.0.9/tests/ui/not-trivial.stderr
error[E0277]: the trait bound `String: ref_cast::trivial::Trivial` is not satisfied
 --> tests/ui/not-trivial.rs:8:10
  |
8 |     two: String,
  |          ^^^^^^ the trait `ref_cast::trivial::Trivial` is not implemented for `String`
  |
  = help: the following other types implement trait `ref_cast::trivial::Trivial`:
            ()
            PhantomData<T>
note: required by a bound in `assert_trivial`
 --> src/trivial.rs
  |
  | pub fn assert_trivial<T: Trivial>() {}
  |                          ^^^^^^^ required by this bound in `assert_trivial`
