shim/third-party/rust/vendor/ref-cast-1.0.9/tests/ui/not-trivial.rs
use ref_cast::RefCast;

#[derive(RefCast)]
#[repr(C)]
struct Test {
    one: String,
    #[trivial]
    two: String,
}

fn main() {}
